Modified css for the weekdays to have better spacing. Fixed component validation bugs (disabled is not true or false, it is only present in the element or not). Fixed form validation issues as well (no required on endDate or endAfter)

--- a/frontend/dashboard/src/app/components/add-job-weekly/add-job-weekly.component.scss
+++ b/frontend/dashboard/src/app/components/add-job-weekly/add-job-weekly.component.scss
@@ -22,10 +22,9 @@
 
 .days-of-week {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-auto-flow: row;
-    flex-basis: 50% 50%;
-    gap: 1rem;
+    column-gap: 2rem;
     margin: auto;
 }
 
@@ -34,4 +33,16 @@
     align-items: center;
     gap: 0.5rem;
     margin-bottom: 0.5rem;
+}
+
+.weekly {
+    display: flex;
+    place-content: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+
+    & label {
+        padding-top: 0.4rem;
+    }
+
 }
